--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -45,6 +45,15 @@ endif()
 set(PBLIB_LIBRARY_NAME pblib-${CMAKE_GENERATOR_PLATFORM})
 set(PBLIB_TESTS_LIBRARY_NAME pbtests-${CMAKE_GENERATOR_PLATFORM})
 
+if (ANDROID)
+    set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+    set(CMAKE_HAVE_THREADS_LIBRARY 1)
+    set(CMAKE_USE_WIN32_THREADS_INIT 0)
+    set(CMAKE_USE_PTHREADS_INIT 1)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    include($ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
+endif()
+
 find_package(Boost REQUIRED program_options)
 find_package(exiv2 CONFIG REQUIRED)
 if (LOG_LEVEL MATCHES Debug)
