--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -80,7 +80,7 @@ jobs:
         # This is the name of the CMakePresets.json's configuration to use to generate
         # the project files. This configuration leverages the vcpkg.cmake toolchain file to
         # run vcpkg and install all dependencies specified in vcpkg.json.
-        configurePreset: 'pblib-release'
+        configurePreset: 'pblib-release-arm64'
   
 
     - name: Add MSBuild to PATH
