--- a/windows/PhotobookAdapter/PhotobookAdapter.vcxproj
+++ b/windows/PhotobookAdapter/PhotobookAdapter.vcxproj
@@ -131,6 +131,11 @@
       <DeploymentContent>false</DeploymentContent>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\PB\build-x64\pblib-x64.vcxproj">
+      <Project>{3bfb5ee2-1db2-3bc3-81e9-78536d688777}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\PhotoBookUI\packages\Microsoft.Windows.CppWinRT.2.0.230706.1\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('..\PhotoBookUI\packages\Microsoft.Windows.CppWinRT.2.0.230706.1\build\native\Microsoft.Windows.CppWinRT.targets')" />
