--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -92,7 +92,7 @@ jobs:
       run: python PB\test-data\generate-data.py PB\test-data
 
     - name: Test
-      working-directory: ${{ github.workspace }}\PB\build-x64\Release
+      working-directory: ${{ github.workspace }}\PB\build-x64\Debug
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
