--- a/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
+++ b/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
@@ -1,9 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Platform>AnyCPU</Platform>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<CsWinRTIncludes>PhotobookAdapter</CsWinRTIncludes>
+		<CsWinRTGeneratedFilesDir>$(OutDir)</CsWinRTGeneratedFilesDir>
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\PhotobookAdapter\PhotobookAdapter.vcxproj" />
+	</ItemGroup>
+
 
 </Project>
